--- a/super-forum-client/src/App.css
+++ b/super-forum-client/src/App.css
@@ -9,8 +9,8 @@
     grid-template-columns: 0.7fr 0.9fr 1.5fr 0.9fr;
     grid-template-rows: 2.75rem 3fr;
     grid-template-areas:
-        "nav nav nav nav"
-        "sidebar leftmenu content rightmenu";
+            "nav nav nav nav"
+            "sidebar leftmenu content rightmenu";
     gap: 0.75rem 0.4rem;
 }
 
@@ -39,3 +39,14 @@
     grid-area: rightmenu;
     background-color: coral;
 }
+
+@media screen and (orientation: portrait) and (max-width: 768px) {
+    .App {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+                "nav"
+                "content";
+    }
+}
+
+
